--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,14 @@
 <head>
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <link rel="icon" href="./images/blossom.png" type="image/x-png"/>
+  <link rel="shortcut icon" href="./images/blossom.png" type="image/x-png"/>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+  <script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>  
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield -%>
 </body>
 </html>
