Added stats back Logo tweaks

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,7 @@
 <h3 id="intro">Meet the contributors that brought you the sexiest programming language in the history of everything.</h3>
+<div id="stats">
+  There are <%= @accounts.count %> core contributors.
+</div>
 <div id="filter">
   <span class="results"></span>
   <input id="filter_by_username" type="text" placeholder="Search by username">
