more tender loving

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -7,6 +7,10 @@
   </div>
 </div>
 
+<div id="forkit">
+  <%=link_to image_tag( 'fork_it.png', :border => 0 ), 'http://github.com/tenderlove/rubycommitters.org', :title => "Fork it?", :target => '#' -%>
+</div>
+
 <script>
   $('.avatars').cycle( { fx: 'zoom' } );
   $('.names').cycle( { fx: 'fade' } );
