--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -6,7 +6,14 @@ body {
   font-size:   .9em;
 }
 
-div#layout {
+div#forkit {
+  position: absolute;
+  top:      10px;
+  right:    5px;
+}
+div#forkit img {
+  width:    200px;
+  height:   330px;  
 }
 
 div#committers {
