--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -17,9 +17,10 @@ div#forkit img {
 }
 
 div#committers {
-  width:       900px;
-  margin:      0px auto;
-  padding-top: 250px;
+  width:         900px;
+  margin:        0px auto;
+  padding:       250px 0 50px 0;
+  overflow:      hidden;
 }
 
 .image-wrapper {
