--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -138,8 +138,10 @@ div.avatars img {
   border:                2px #ccc solid;
   -moz-border-radius:    5px;
   -webkit-border-radius: 5px;  
-  height:                100px;
-  width:                 90px;
+  max-height:            90px;
+  width:                 auto;
+  min-width:             90px;
+  min-height:            90px;
   padding:               5px;
 }
 
