--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -16,10 +16,12 @@
       <%= link_to site.title, site.url %>
     <% end %>
   </td>
-  <% Account::SERVICES.each do |service| %>
+  <% Account::SERVICES.each do |service_name| %>
     <td class="service">
-      <% if service = account.services.find_by_name(service) %>
-        <%= link_to image_tag(service.icon), service.url %>
+      <% if service = account.services.find_by_name(service_name) %>
+        <%= link_to image_tag("icons/#{service_name}.png"), service.url %>
+      <% else %>
+        <%= image_tag("icons/#{service_name}.png", :alt => nil) %>
       <% end %>
     </td>
   <% end %>
