--- a/app/views/accounts/_portrait.html.erb
+++ b/app/views/accounts/_portrait.html.erb
@@ -1,9 +1,4 @@
 <% url = (portrait = account.portraits.first).present? ? portrait.url : '/images/missing.png' -%>
-<% image = image_tag(url, :alt => account.username) -%>
 <div class='image-wrapper'>
-  <% if full -%>
-    <%= image %>
-  <% else -%>
-    <%= link_to image, account %>
-  <% end -%>
+  <%= image_tag(url, :alt => account.username) %>
 </div>
