--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -2,9 +2,8 @@
   <thead>
     <tr>
       <th></th>
-      <th>Name</th>
-      <th>Website</th>
-      <th colspan="6">Services</th>
+      <th><%= t('Name') %></th>
+      <th colspan="6"><%= t('Services') %></th>
     </tr>
   </thead>
   <tbody>
