--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -6,9 +6,11 @@
   </td>
   <td class="name"><%= link_to account.name %></td>
   <% Account::SERVICES.each do |service_name| %>
-    <td class="service <%= service_name %><%= ' active' if account.has_service?(service_name) %>">
-      <% if account.has_service?(service_name) %>
-        <%= link_to image_tag("icons/#{service_name}.png") %>
+    <% service = account.services.where(:name => service_name).first %>
+
+    <td class="service <%= service_name %><%= ' active' if service.present? %>">
+      <% if service.present? %>
+        <%= link_to image_tag("icons/#{service_name}.png"), service.url %>
       <% else %>
         <%= image_tag("icons/#{service_name}.png", :alt => nil) %>
       <% end %>
