Add a favorite icon.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 
   <title>Ruby <%= t('Committers') %></title>
 
+  <%= favicon_link_tag %>
   <%= stylesheet_link_tag 'site', :cache => false %>
   <%= javascript_include_tag 'application' %>
 
