--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th></th>
       <th><%= t('Name') %></th>
+      <th><%= t('Website') %></th>
       <th colspan="6"><%= t('Services') %></th>
     </tr>
   </thead>
