--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -84,7 +84,7 @@ a {
   -o-transition:         background 0.2s;
   transition:            background 0.2s;
 }
-a.big_link{
+a.big_link {
   display:block;
   text-decoration:none;
   height:105px;
@@ -92,12 +92,16 @@ a.big_link{
   border-radius: 4px;
   -moz-border-radius: 4px;
 }
-a:hover {
+#account a:hover {
   background-color: #0072bc;
   color: white;
   text-decoration: none;
 }
-
+.account a.big_link:hover { 
+  background-color: #f7f7f7;
+  -webkit-box-shadow:inset 0 0 5px #888;
+  -moz-box-shadow:inset 0 0 5px #888;
+}
 .image-wrapper {
   max-width: 100px;
 	float:left;
@@ -182,8 +186,8 @@ a:hover {
   font-size: 38px;
   text-shadow: 0 1px 1px #fff;
   color: #444;
-  margin-top: 10px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 #stats {
   float: left;
@@ -268,7 +272,7 @@ body.lights_down #account .account{
 }
 #accounts .my_names {
   font-size: 14px;
-  color: gray;
+  color: #444;
 }
 #accounts .account p {
   color: gray;
@@ -346,9 +350,6 @@ body.lights_down #account .account{
   margin-top: 10px;
   font-size: 16px;
   color: gray;
-}
-#accounts .account a.big_link:hover p, #accounts .account a.big_link:hover .my_names{
-  color:#fff;
 }
 #account header p strong {
   color: gray;
@@ -452,6 +453,7 @@ body.lights_down #account .account{
   opacity: 1.0;
   -moz-opacity: 1.0;
   filter:alpha(opacity=100);
+  background-color: transparent !important;
 }
 .my_services li:last-child a {
   margin:0;
