--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -10,7 +10,7 @@ header, section, footer, aside, nav, article, figure { display: block; }
 
 /* =FLOATS */
 
-.card article:after {
+.card article:after, .services:after {
   clear: both;
   content: ' ';
   display: block;
@@ -26,7 +26,7 @@ header, section, footer, aside, nav, article, figure { display: block; }
 body {
   background: #eee;
   color: rgba(0, 0 ,0, .6);
-  font: normal 13px/30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: normal 13px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .wrapper {
@@ -84,7 +84,7 @@ h1 {
   display: block;
   float: left;
   margin: 15px;
-  min-height: 200px;
+  padding-bottom: 30px;
   position: relative;
   -webkit-transition: -webkit-box-shadow .175s linear;
   width: 290px;
@@ -171,7 +171,7 @@ h2 {
   border-bottom: 1px solid rgba(173, 192, 204, .4);
   color: rgba(0, 0, 0, .8);
   font-size: 16px;
-  padding: 25px 0 25px 40px;
+  padding: 30px 0 29px 40px;
 }
 
 .info { background: url('/images/edit-16x16.png') 7px 7px no-repeat; }
@@ -179,12 +179,15 @@ h2 {
 
 .card li {
   border-bottom: 1px solid rgba(173, 192, 204, .2);
+  line-height: 29px;
   padding-left: 40px;
 }
 
 .names { font-size: 14px; }
 .nicks { color: rgba(0, 0, 0, .3); }
 .nicks:before, .nicks:after { content: '"'; }
+
+/* =SITES */
 
 .sites a {
   display: block;
@@ -195,11 +198,41 @@ h2 {
   white-space: nowrap;
 }
 
+/* =SERVICES */
+
+.services {
+  margin-bottom: -5px;
+  padding: 25px 0 0 40px;
+}
+
 .services li {
-  background: #aaa;
+  border-bottom: 0;
   display: block;
   float: left;
-  height: 30px;
+  line-height: 30px;
   padding: 0;
-  width: 30px;
 }
+
+.services a {
+  background-repeat: no-repeat;
+  display: block;
+  height: 24px;
+  margin: 3px 0;
+  width: 24px;
+}
+
+.twitter a, .facebook a, .github a, .friendfeed a, .mixi a {
+  background-image: url('/images/sprite_services.png');
+  text-indent: -9999px;
+}
+
+.twitter a { background-position: 0 0; }
+.twitter a:hover { background-position: 0 -24px; }
+.facebook a { background-position: -24px 0; }
+.facebook a:hover { background-position: -24px -24px; }
+.github a { background-position: -48px 0; }
+.github a:hover { background-position: -48px -24px; }
+.friendfeed a { background-position: -72px 0; }
+.friendfeed a:hover { background-position: -72px -24px; }
+.mixi a { background-position: -96px 0; }
+.mixi a:hover { background-position: -96px -24px; }
