--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,8 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<h1><img src="/images/h1.png" width="450" height="55" alt="Ruby Committers"></h1>
+<p class="github"><%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %></p>
+<ul class="committers">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
+<div id="footer">
+<p class="copy">Ruby comitters</p>
+</div>
