--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
 <head>
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js', 'jquery.masonry.min' %>
+  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js', 'jquery.masonry.min', 'jquery.qtip-1.0.0-rc3.min' %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
@@ -13,9 +12,33 @@
 <%= yield %>
 
 <script type="text/javascript" charset="utf-8">
-  $('.cards').masonry({
-/*    singleMode: true,*/
-    itemSelector: '.card'
+  $(document).ready(function(){
+    $('.cards').masonry({
+      itemSelector: '.card'
+    });
+    
+    $('a.tool_tip').qtip({
+      position: {
+        corner: {
+          target: 'bottomMiddle',
+          tooltip: 'topMiddle'
+        }
+      },
+      style: {
+        border: {
+          color: '#222',
+          radius: 3
+        },
+        tip: {
+          corner: 'topMiddle',
+          color: '#222',
+          size: {
+            x: 10,
+            y: 5
+          }
+        }
+      }
+    });
   });
 </script>
 </body>
