Hot forking action.

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -9,5 +9,5 @@
 </section>
 
 <footer>
-  <h1><%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %></h1>
+  <h1><%= link_to 'Fork this on Github', 'http://github.com/tenderlove/rubycommitters.org', :title => 'Fork this on Github' %></h1>
 </footer>
