--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -23,6 +23,19 @@ header, section, footer, aside, nav, article, figure { display: block; }
 
 /* =LAYOUT */
 
+a:link, a:visited {
+  color: #b12c2c;
+  text-decoration: none;
+  -webkit-transition: color .25s;
+}
+
+a:hover, a:active { color: rgba(0, 0, 0, .8); }
+
+a:active {
+  position: relative;
+  top: 1px;
+}
+
 body {
   background: #ececec url('/images/bg.jpg');
   color: rgba(0, 0 ,0, .6);
