moved filter function to controller, much faster. pruned js

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,5 +1,5 @@
 <% full ||= false -%>
-<article class="account">
+<article class="account" id="account_<%= account.id %>">
   <% unless full -%>
     <a class="big_link" href="<%= account_path account %>">
   <% end -%>
