Added iddy icon

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -481,10 +481,10 @@ a.github{
   background:url(/images/git_32.png) no-repeat 0 0;
 }
 a.mixi{
-  background:url(/images/mixi.png) no-repeat 0 0;
+  background:url(/images/mixi_32.png) no-repeat 0 0;
 }
 a.iddy{
-  
+  background:url(/images/iddy_32.png) no-repeat 0 0;
 }
 a.friendfeed{
   background:url(/images/friendfeed_32.png) no-repeat 0 0;
