Now linking to google books :)

--- a/app/views/accounts/_book.html.erb
+++ b/app/views/accounts/_book.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to book.value, "http://isbndb.com/search-all.html?kw=#{book.key}" %></li>
+<li><%= link_to book.value, "http://books.google.com/books?vid=#{book.key}" %></li>
