--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -5,7 +5,7 @@
         <% if account.portraits.empty? %>
           <%= image_tag 'user-128x128.png' %>
         <% else %>
-          <%= render :partial => 'portrait', :collection => account.portraits %></div>
+          <%= render :partial => 'portrait', :collection => account.portraits %>
         <% end %>
       </div>
     </div>
